--- a/2 Discussion.ipynb
+++ b/2 Discussion.ipynb
@@ -1647,9 +1647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "s1-enumerator",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "s1-enumerator"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1661,7 +1661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
